--- a/index-html.html
+++ b/index-html.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Your Name</h1>
-            <p>Web Developer | Designer | Creator</p>
+            <h1>Nyasha Mugwambi</h1>
+            <p>Student| Creative </p>
             <nav>
                 <a href="index.html" class="active">Home</a>
                 <a href="about.html">About</a>
@@ -23,15 +23,15 @@
     <section class="home-content">
         <div class="container">
             <h2>Welcome to My Portfolio</h2>
-            <p>I create clean, functional, and accessible web experiences.</p>
-            <p>Explore my work and get in touch for collaborations.</p>
+            <p>I aim create clean, functional, and accessible web experiences.</p>
+            <p>Explore my works.</p>
             <a href="projects.html" class="cta-button">View My Projects</a>
         </div>
     </section>
     
     <footer>
         <div class="container">
-            <p>&copy; 2025 Your Name. All rights reserved.</p>
+            <p>&copy; 2025 Nyasha Mugwambi. All rights reserved.</p>
         </div>
     </footer>
 </body>
