--- a/about-html.html
+++ b/about-html.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Your Name</h1>
-            <p>Web Developer | Designer | Creator</p>
+            <h1>Nyasha Mugwambi</h1>
+            <p>Student | Creative</p>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html" class="active">About</a>
@@ -25,17 +25,14 @@
             <h2>About Me</h2>
             <p>Hello! I'm a passionate web developer and designer with a focus on creating clean, functional, and accessible websites. With a background in both design and development, I bring a holistic approach to every project I work on.</p>
             <p>I believe in the power of simplicity and minimalism, which is reflected in my work. I'm constantly learning and exploring new technologies to stay on top of industry trends and deliver the best possible solutions.</p>
-            <p>When I'm not coding, you can find me hiking in nature, reading design books, or experimenting with new recipes in the kitchen.</p>
+            <p>When I'm not coding, you can find me editing, reading, crocheting, or experimenting with new recipes in the kitchen.</p>
             
             <h2>Skills</h2>
             <p>I've developed expertise in various areas throughout my career, with a focus on web development and design.</p>
             <div class="skills">
                 <span class="skill-tag">HTML/CSS</span>
                 <span class="skill-tag">JavaScript</span>
-                <span class="skill-tag">React</span>
-                <span class="skill-tag">Node.js</span>
-                <span class="skill-tag">UI/UX Design</span>
-                <span class="skill-tag">Responsive Design</span>
+                <span class="skill-tag">Bash Script</span>
                 <span class="skill-tag">Git</span>
                 <span class="skill-tag">Python</span>
                 <span class="skill-tag">SQL</span>
@@ -45,7 +42,7 @@
     
     <footer>
         <div class="container">
-            <p>&copy; 2025 Your Name. All rights reserved.</p>
+            <p>&copy; 2025 Nyasha Mugwambi. All rights reserved.</p>
         </div>
     </footer>
 </body>
