--- a/contact-html.html
+++ b/contact-html.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Your Name</h1>
-            <p>Web Developer | Designer | Creator</p>
+            <h1>Nyasha Mugwambi</h1>
+            <p>Student | Creative</p>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
@@ -28,19 +28,20 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <span class="contact-icon">✉️</span>
-                    <span>email@example.com</span>
+                    <span>nyashamugwambi@gmail.com</span>
                 </div>
                 <div class="contact-item">
                     <span class="contact-icon">📱</span>
-                    <span>+1 123 456 7890</span>
+                    <span>+61 459 680 139</span>
                 </div>
                 <div class="contact-item">
                     <span class="contact-icon">🔗</span>
-                    <span>linkedin.com/in/yourname</span>
+                    <span>https://www.linkedin.com/in/nyasha-mugwambi-a08375272/
+</span>
                 </div>
                 <div class="contact-item">
                     <span class="contact-icon">💻</span>
-                    <span>github.com/yourusername</span>
+                    <span>github.com/nya-mugs</span>
                 </div>
             </div>
         </div>
@@ -48,7 +49,7 @@
     
     <footer>
         <div class="container">
-            <p>&copy; 2025 Your Name. All rights reserved.</p>
+            <p>&copy; 2025 Nyasha Mugwambi. All rights reserved.</p>
         </div>
     </footer>
 </body>
