--- a/collage.html
+++ b/collage.html
@@ -92,17 +92,17 @@
       <div class="collage">
         <!-- 36 collage items -->
         <!-- Sample Images -->
-        <div class="collage-item"><img src="/api/placeholder/400/400" alt="Image 1"></div>
-        <div class="collage-item"><img src="/api/placeholder/400/400" alt="Image 2"></div>
-        <div class="collage-item"><img src="/api/placeholder/400/400" alt="Image 3"></div>
-        <div class="collage-item"><img src="/api/placeholder/400/400" alt="Image 4"></div>
-        <div class="collage-item"><img src="/api/placeholder/400/400" alt="Image 5"></div>
-        <div class="collage-item"><img src="/api/placeholder/400/400" alt="Image 6"></div>
+        <div class="collage-item"><img src="1000016592.JPG" alt="Image 1"></div>
+        <div class="collage-item"><img src="1000016836.JPG" alt="Image 2"></div>
+        <div class="collage-item"><img src="1000019893.JPG" alt="Image 3"></div>
+        <div class="collage-item"><img src="1000027713.JPG" alt="Image 4"></div>
+        <div class="collage-item"><img src="1000033405.JPG" alt="Image 5"></div>
+        <div class="collage-item"><img src="1000036333.JPG" alt="Image 6"></div>
 
-        <div class="collage-item"><img src="/api/placeholder/400/400" alt="Image 7"></div>
-        <div class="collage-item"><img src="/api/placeholder/400/400" alt="Image 8"></div>
-        <div class="collage-item"><img src="/api/placeholder/400/400" alt="Image 9"></div>
-        <div class="collage-item"><img src="/api/placeholder/400/400" alt="Image 10"></div>
+        <div class="collage-item"><img src="1000036939.JPG" alt="Image 7"></div>
+        <div class="collage-item"><img src="1000037256.JPG" alt="Image 8"></div>
+        <div class="collage-item"><img src="1000037256.JPG" alt="Image 9"></div>
+        <div class="collage-item"><img src="1000037256.JPG" alt="Image 10"></div>
         <div class="collage-item"><img src="/api/placeholder/400/400" alt="Image 11"></div>
         <div class="collage-item"><img src="/api/placeholder/400/400" alt="Image 12"></div>
 
