--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nyasha Mugwambi – Photo Collage</title>
   <link rel="stylesheet" href="styles.css" />
+
+  <header>
+        <div class="container">
+            <h1>Your Name</h1>
+            <nav>
+                <a href="#about">About</a>
+                <a href="#projects">Projects</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
+    </header>
+
+    <div class="container main-content">
+        <section id="about" class="section">
+            <h2>About Me</h2>
+            <p>Hello! I'm a passionate developer with expertise in web technologies, problem-solving, and creating innovative solutions. I love turning ideas into reality through code.</p>
+        </section>
+
   <style>
     .collage-wrapper {
       display: flex;
